Fix search key streams storage